--- a/charts/nextcloud/templates/deployment.yaml
+++ b/charts/nextcloud/templates/deployment.yaml
@@ -224,6 +224,9 @@ spec:
           mountPath: /etc/nginx/nginx.conf
           subPath: nginx.conf
       {{- end }}
+      {{- if .Values.nextcloud.extraVolumeMounts }}
+{{ toYaml .Values.nextcloud.extraVolumeMounts | indent 8 }}
+      {{- end }}
       {{- with .Values.nextcloud.extraSidecarContainers }}
         {{- toYaml . | nindent 6 }}
       {{- end }}
